--- a/LLSA.csproj
+++ b/LLSA.csproj
@@ -6,6 +6,7 @@
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    <ApplicationIcon>Assets\logo2.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
